--- a/assets/app/css/forgot_password.css
+++ b/assets/app/css/forgot_password.css
@@ -97,6 +97,7 @@ body{
         display: block;
         width: 100%;
         height: 100vh;
+        position: relative;
         
 
     }
@@ -107,6 +108,8 @@ body{
         display: flex;
         justify-content: space-around;
         align-items: center;
+        position: relative;
+        z-index: 1;
     }
 
     
@@ -120,7 +123,37 @@ body{
     }
     
     [outer-container] [inner-container] [two]{
-        width: 400px;
+        width: 440px;
+        padding: 40px 40px;
+        position: relative;
+        background-color: var(--bg-grey);
+    }
+
+    [outer-container] [inner-container] [two]::after{
+        content: ' ';
+        background-color: rgba(0, 0, 0,00.09);
+        width: 105%;
+        height: 105%;
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        filter: blur(20px);
+        transform: translateY(13%) scale(0.7);
+        border-radius: 0%;
+    }
+    
+    [outer-container] [inner-container] [two]::before{
+        content: ' ';
+        background-color: rgba(0, 0, 0,00.02);
+        width: 105%;
+        height: 105%;
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: -2.5%;
+        filter: blur(10px);
+        transform: translateY(0%) scale(1.05);
     }
 
     [form-container]{
