--- a/assets/app/css/registration_success.css
+++ b/assets/app/css/registration_success.css
@@ -109,6 +109,7 @@ body{
         display: block;
         width: 100%;
         height: 100vh;
+        position: relative;
         
 
     }
@@ -120,6 +121,8 @@ body{
         justify-content: space-around;
         align-items: center;
         flex-direction: row;
+        position: relative;
+        z-index: 1;
     }
 
     
@@ -133,7 +136,38 @@ body{
     }
     
     [outer-container] [inner-container] [two]{
-        width: 300px;
+        width: 340px;
+        padding: 40px;
+        position: relative;
+        background-color: var(--bg-grey);
+    }
+
+        
+    [outer-container] [inner-container] [two]::after{
+        content: ' ';
+        background-color: rgba(0, 0, 0,00.09);
+        width: 105%;
+        height: 105%;
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        filter: blur(20px);
+        transform: translateY(13%) scale(0.7);
+        border-radius: 0%;
+    }
+
+    [outer-container] [inner-container] [two]::before{
+        content: ' ';
+        background-color: rgba(0, 0, 0,00.02);
+        width: 105%;
+        height: 105%;
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: -2.5%;
+        filter: blur(10px);
+        transform: translateY(0%) scale(1.05);
     }
 
     [form-container]{
