--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -462,3 +462,95 @@ button{
 [red]{
     background-color: red;
 }
+
+
+
+
+/****Line****/
+[line-1]{
+    /*Line Clamp Code*/
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
+
+[line-2]{
+    /*Line Clamp Code*/
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
+
+[line-3]{
+    /*Line Clamp Code*/
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
+
+[line-4]{
+    /*Line Clamp Code*/
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
+
+[line-5]{
+    /*Line Clamp Code*/
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
+
+
+
+
+/**********Crumbs**********/
+[bread-crumbs]{
+    display: flex;
+    list-style: none;
+    margin: unset;
+}
+[bread-crumbs] li{
+    margin-left: 10px;
+    position: relative;
+    font-size: .8rem;
+}
+[bread-crumbs] li::after{
+    content:  ' ';
+    width: 3px;
+    height: 3px;
+    background-color: var(--main);
+    position: absolute;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -7px;
+
+}
+
+[bread-crumbs] li:first-child{
+    margin-left: unset;
+}
+
+[bread-crumbs] li:first-child::after{
+    display: none;
+}
+
+
+
+
+/*********Swiper button*****/
+div[role="button"][aria-disabled="true"]{
+    display: none;
+}
+
+/*********Icon fix***************/
+i[fix]::before{
+    line-height: unset !important;
+}
